[package]
name = "caduceus-term"
version = "0.1.0"
edition = "2021"
description = "Terminal proxy with WASM-based I/O stream transformation"
license = "MIT"
repository = "https://github.com/erikh/caduceus-term"
homepage = "https://github.com/erikh/caduceus-term"
keywords = ["terminal", "proxy", "wasm", "pty", "transform"]
categories = ["command-line-utilities", "wasm"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
wasmtime = { version = "42", features = ["async", "cranelift"] }
pty-process = { version = "0.5", features = ["async"], optional = true }
thiserror = "2"
tracing = "0.1"
clap = { version = "4", features = ["derive"], optional = true }
tempfile = { version = "3", optional = true }
wasmtime-wasi = { version = "42", optional = true }

[dev-dependencies]
wat = "1"
tracing-subscriber = "0.3"

[features]
default = ["pty"]
pty = ["dep:pty-process"]
build-cli = ["dep:clap", "dep:tempfile"]
wasi = ["dep:wasmtime-wasi"]

[[bin]]
name = "caduceus-build"
path = "src/bin/caduceus_build/main.rs"
required-features = ["build-cli"]
